Intento por perfeccionar Dijkstra y solucionar sus malas elecciones